--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ body {
   grid-template-rows: repeat(8, 1fr);
   position: relative;
 }
+
+.navbarmain{
+  display: none;
+}
 .main .info {
   grid-column: 4 / 8;
   grid-row: 2 / 7;
@@ -198,10 +202,263 @@ body {
 
 
 
+.serviciosmain{
+  display: grid;
+  height: 100%;
+  background-color: #121212;
+  max-width: 100%;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 120px 100px 75px 75px 75px 75px 100px;
+  position: relative;
+}
+
+.servicios__titulo{
+  color: yellow;
+  grid-column: 5/7;
+  grid-row: 1;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.servicios__texto{
+  color: white;
+  grid-column: 3/9;
+  grid-row: 2;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.servicios__nombre{
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.servicios__navstand{
+  grid-column: 1/11;
+  grid-row: 3;
+  background-image: url("..//imagenes/render1.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.servicios__navproductos{
+  grid-column: 1/11;
+  grid-row: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("..//imagenes/RENDERENCENDEDOR.854.jpg");
+  background-size: cover;
+}
+.servicios__navinteriores{
+  grid-column: 1/11;
+  grid-row: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("..//imagenes/F7.jpg");
+  background-size: cover;
+}
+.servicios__navgrafico{
+  grid-column: 1/11;
+  grid-row: 6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("..//imagenes/Screenshot1.jpg");
+  background-size: cover;
+}
+.servicios__info{
+  color: white;
+  display: none;
+}
 
 
 
-@media only screen and (max-width: 390px)  {
+.portfoliomain{
+  display: grid;
+  height: 100%;
+  background-color: #121212;
+  max-width: 100%;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 120px 100px 75px 75px 75px 75px 100px;
+  position: relative;
+}
+
+.portfolio__titulo{
+  color: yellow;
+  grid-column: 6/8;
+  grid-row: 1;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio__texto{
+  color: white;
+  grid-column: 4/10;
+  grid-row: 2;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.portfolio__nombre{
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio__navstand{
+  grid-column: 1/4;
+  grid-row: 4/7;
+  background-image: url("..//imagenes/render1.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.portfolio__navproductos{
+  grid-column: 4/7;
+  grid-row: 4/7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("..//imagenes/RENDERENCENDEDOR.854.jpg");
+  background-size: cover;
+}
+.portfolio__navinteriores{
+  grid-column: 7/10;
+  grid-row: 4/7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("..//imagenes/F7.jpg");
+  background-size: cover;
+}
+.portfolio__navgrafico{
+  grid-column: 10/13;
+  grid-row: 4/7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("..//imagenes/Screenshot1.jpg");
+  background-size: cover;
+}
+.portfolio__info{
+  color: white;
+  display: none;
+}
+
+.contactomain{
+  display: grid;
+  height: 100%;
+  background-color: #121212;
+  max-width: 100%;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 120px 100px 300px 100px 100px 100px 250px 250px;
+  position: relative;
+}
+
+.contacto__titulo{
+  color: yellow;
+  grid-column: 5/7;
+  grid-row: 1;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contacto__formulario{
+  display: flex;
+  grid-column: 2/10;
+  grid-row: 2/4;
+  background-color: #202020;
+  max-width: 1000px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.contacto__form{
+  display: flex;
+  text-align: center;
+  padding: 30px;
+}
+
+.contacto__formtexto{
+  margin: auto;
+}
+
+.contacto__formimg{
+  padding: 20px;
+  width: 100%;
+}
+
+.contacto__forminput{
+  padding: 7px;
+  display: inline-block;
+}
+
+.contacto__forminput input{
+  width: 350px;
+  height: 25px;
+  display: inline-block;
+  background-color: black;
+  border: none;
+  border-bottom: 1px yellow solid;
+  color: white;
+}
+
+
+.contacto__forminput textarea{
+  min-width: 350px;
+  min-height: 150px;
+  max-width: 350px;
+  background-color: black;
+  border: none;
+  border-bottom: 1px yellow solid;
+  color: white;
+}
+.contacto__direccion{
+  grid-column: 5/7;
+  grid-row: 5;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.contacto__numero{
+  grid-column: 5/7;
+  grid-row: 6;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.contacto__ubicacion{
+  grid-column: 4/8;
+  grid-row: 7;
+  margin: auto;
+}
+@media only screen and (max-width: 415px)  {
   
   .navbar {
     background-color: #202020;
@@ -220,11 +477,11 @@ body {
     grid-column: 1 / 2;
   }
   .navbar .logomenu{
-  grid-column: 8/9;
-  grid-row: 1;
-  width: 30px;
-  height: 30px;
-  margin: 10px;
+    grid-column: 8/9;
+    grid-row: 1;
+    width: 30px;
+    height: 30px;
+    margin: 10px;
   }
   .navbar {
     position: relative;
@@ -235,18 +492,46 @@ body {
 
 
   .main {
-  max-width: 480px;
-  background-image: linear-gradient(rgba(16, 16, 16, .8), rgba(16, 16, 16, .9)) , url("..//imagenes/render1.jpg");
-  background-size: cover;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  position: relative;
+    max-width: 480px;
+    background-image: linear-gradient(rgba(16, 16, 16, .8), rgba(16, 16, 16, .9)) , url("..//imagenes/render1.jpg");
+    background-size: cover;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 20px 400px 400px 100px;
+    position: relative;
   }
+
+  .navbarmain{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+  }
+  
+  .navbarmain ul{
+    display: inline-block;
+    margin: auto;
+    text-decoration: none;
+  }
+
+  .navbarmain li{
+    display: inline-block;
+    text-decoration: none;
+  }
+
+  a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    margin: 5px;
+  }
+
 
   .main .info {
     grid-column: 2/6;
-    grid-row: 1/3;
+    grid-row: 2/3;
     color: #fff;
     z-index: 1;
     margin-bottom: 30px;
@@ -350,7 +635,171 @@ body {
     text-align: center;
   }
 
-    .quienessomos__profiletext h3{
+  .quienessomos__profiletext h3{
     margin: 10px;
   }
+
+
+
+  .serviciosmain{
+  display: grid;
+  height: 100%;
+  background-color: #121212;
+  max-width: 100%;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 120px 100px 120px 120px 120px 120px 50px;
+  position: relative;
+  }
+
+
+  .portfoliomain{
+  display: grid;
+  height: 100%;
+  background-color: #121212;
+  max-width: 100%;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 120px 100px 120px 120px 120px 120px 50px;
+  position: relative;
+  }
+
+
+
+  .portfolio__titulo{
+    color: yellow;
+    grid-column: 5/7;
+    grid-row: 1;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .portfolio__texto{
+    color: white;
+    grid-column: 3/9;
+    grid-row: 2;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+  }
+
+  .portfolio__nombre{
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .portfolio__navstand{
+    grid-column: 1/11;
+    grid-row: 3;
+    background-image: url("..//imagenes/render1.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .portfolio__navproductos{
+    grid-column: 1/11;
+    grid-row: 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("..//imagenes/RENDERENCENDEDOR.854.jpg");
+    background-size: cover;
+  }
+  .portfolio__navinteriores{
+    grid-column: 1/11;
+    grid-row: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("..//imagenes/F7.jpg");
+    background-size: cover;
+  }
+  .portfolio__navgrafico{
+    grid-column: 1/11;
+    grid-row: 6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("..//imagenes/Screenshot1.jpg");
+    background-size: cover;
+  }
+  .portfolio__info{
+    color: white;
+    display: none;
+  }
+
+  .contacto__formulario{
+  display: flex;
+  grid-column: 2/10;
+  grid-row: 2/4;
+  background-color: #202020;
+  max-width: 300px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  }
+
+  .contacto__form{
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contacto__formimg img{
+      display: flex;
+      width: 100px;
+      margin: auto;
+  }
+
+    .contacto__forminput{
+    padding: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contacto__forminput input{
+    width: 280px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    border: none;
+    border-bottom: 1px yellow solid;
+    color: white;
+  }
+
+
+  .contacto__forminput textarea{
+    min-width: 280px;
+    min-height: 75px;
+    max-width: 100px;
+    background-color: black;
+    border: none;
+    border-bottom: 1px yellow solid;
+    color: white;
+  }
+
+  .contacto__direccion{
+    grid-column: 3/9;
+  }
+  .contacto__numero{
+    grid-column: 3/9;
+  }
+  .contacto__ubicacion{
+    max-width: 250px;
+    max-height: 200px;
+    margin: auto;
+    grid-column: 2/10;
+    display: flex;
+    justify-content: center;
+  }
+
 }
+
